--- a/Orbis Suite Installer/Components.wxs
+++ b/Orbis Suite Installer/Components.wxs
@@ -20,7 +20,7 @@
 
         <!--Install Payloads-->
         <File Id="Payload505" Name="OrbisLib-505.bin" Source="$(var.ProjectDir)Assets\Program Data\" />
-        <!-- <File Id="Payload672" Name="OrbisLib-672.bin" Source="$(var.ProjectDir)Assets\Program Data\" /> -->
+        <File Id="Payload672" Name="OrbisLib-672.bin" Source="$(var.ProjectDir)Assets\Program Data\" />
         <!-- <File Id="Payload702" Name="OrbisLib-702.bin" Source="$(var.ProjectDir)Assets\Program Data\" /> -->
         
       </Component>
