Make loadsomthing less annoying + aware of loading failure & added readme for build instruction.

--- a/Windows/OrbisNeighborHood/Controls/TargetPanel.xaml
+++ b/Windows/OrbisNeighborHood/Controls/TargetPanel.xaml
@@ -136,7 +136,7 @@
                                    Margin="0 0 5 0"
                                    ImageSource="/OrbisNeighborHood;component/Images/Locate.png"
                                    ImageMargin="4"
-                                   Click="LocateTarget_Click" Loaded="LocateTarget_Loaded"/>
+                                   Click="LocateTarget_Click"/>
 
                 <!-- Send Payload -->
                 <local:ImageButton x:Name="SendPayload"
